--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,17 @@
 <h2>Create a new drone</h2>
+
+<form method="POST" action='/drones/create'>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Name</label>
+    <input name="DroneName" type="text" class="form-control" id="exampleInputEmail1">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputDescription1" class="form-label">Propellers</label>
+    <input  name="DronePropellers" type="number" class="form-control" id="exampleInputDescription1">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Maximal speed</label>
+    <input name="DroneMaxSpeed" type="number" class="form-control" id="exampleInputEmail1">
+  </div>
+  <button type="submit" class="btn btn-primary">Create</button>
+</form>
