--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,17 @@
 <h2>Update the drone</h2>
+
+<form method="POST" action="/drones/{{drones._id}}/edit">
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Name</label>
+    <input value={{drones.name}}  name="DroneName" type="text" class="form-control" id="exampleInputEmail1">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputDescription1" class="form-label">Propellers</label>
+    <input value="{{drones.propellers}}" name="DronePropellers" type="number" class="form-control" id="exampleInputDescription1">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputDescription1" class="form-label">Maximal Speed</label>
+    <input value="{{drones.maxSpeed}}" name="DroneMaxSpeed" type="number" class="form-control" id="exampleInputDescription1">
+  </div>
+  <button type="submit" class="btn btn-primary"> Update </button>
+</form>
