--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<div>
+    <img src="/images/drone.png" width="600px" height="400px" alt="Drone image">
+</div>
